--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -1,16 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,greek);
 
 /* Reset unusual Firefox-on-Android default style, see https://github.com/necolas/normalize.css/issues/214*/
-@media (max-width: 991px) { .form-text, .form-textarea, .block-superfish select { 
-    background-image: none; 
-    display: inline-block;
-    width:100%;
-    border: 1px solid #ccc;
-    color: #666;
-    padding: 5px;
-    font-size: 12px;
-} 
-}
+@media (max-width: 991px) { .form-text, .form-textarea, .block-superfish select { background-image: none; } }
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 * { transition: all 0.3s ease-out; } 
@@ -195,14 +186,6 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 #header div.social ul.social li a.skype {
     background-position: -304px 0;
 }
-main-navigation .block-superfish select {
-    border-top: none;
-    border-bottom: none;
-    width: 100%;
-}
-
-#main-navigation .block-superfish  { padding: 20px; }
-
 
 /* header-banner-wrapper */
 
@@ -266,12 +249,6 @@ main-navigation .block-superfish select {
     padding: 0;
     line-height: 36px;
     text-align: center;
-    font-family: 'Cabin Condensed', Arial, sans-serif;
-}
-@media (max-width: 991px) {
-#main-navigation-inside {
-        padding: 20px;
-    }    
 }
 
 #main-navigation-inside ul.menu  {
@@ -617,6 +594,11 @@ textarea.form-textarea {
 
 /* blog */
 
+div.submitted span{
+    margin: 20px 0;
+    color: #ccc;
+}
+
 /* sidebar second */
 .widget_sidebar {
 	
@@ -634,6 +616,13 @@ textarea.form-textarea {
 #block-system-main a {
     color: #E54D1B;
     text-decoration: none;
+}
+
+#block-system-main h2 a {
+    text-align: left;
+    font-size: 50px;
+    font-weight: 100;
+    margin: 0 auto 50px;
 }
 
 #block-system-main a:focus {
@@ -761,7 +750,6 @@ h1.page-title {
 
 #header-top .block, #main-navigation .block, #banner .block { padding: 0; }
 
-
 /*glyphicon-block*/
 .glyphicon-block {text-align: center; }
 
@@ -836,8 +824,6 @@ ul.menu li.expanded ul { padding-left: 25px; border-top: 1px dashed #ddd; margin
 
 /*header-top menu*/
 #header-top ul.menu li a { font-size: 13px; text-transform: capitalize;  padding: 16px 20px 16px; }
-
-
 
 /*superfish menu style resets*/
 .sf-menu.sf-horizontal.sf-shadow ul { background: #ffffff; padding: inherit!important; -webkit-border-top-right-radius: 0; -webkit-border-bottom-left-radius: 0;
