--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -189,18 +189,20 @@ thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 
 
 /* header-banner-wrapper */
 
+
 #header-banner-wrapper {    
-    background: #333;
-    background-image: url(../images/local/sunrise_background1.jpg);
+    background: url(../images/local/sunrise_background1.jpg) no-repeat center center fixed #333;
     background-attachment: fixed;
-    background-size: cover;
-    /*min-height: 200px;*/
     min-height: 193px;
     
     -webkit-background-size: cover; /* For WebKit*/
     -moz-background-size: cover;    /* Mozilla*/
     -o-background-size: cover;      /* Opera*/
     background-size: cover;         /* Generic*/
+}
+
+body.html.front #header-banner-wrapper {
+    height:100vh;
 }
 
 #header-banner-wrapper div.slogan {
